# bioh-bch

./: .gitmodules  CMakeLists.txt  Makefile  process_explanation.md
examples/arcface/: arcface_biohash_bch_demo.cpp  main.cpp
test/: test_biohash.cpp
tools/: build_opencv.sh
